[package]
name = "ft6x06-rs"
version = "0.4.0"
edition = "2024"

description = "A pure Rust driver for the FT6x06 capacitive touch screen controller."
authors = ["DogeDark"]
license-file = "LICENSE"
repository = "https://github.com/Amperstrand/ft6x06-rs"
readme = "README.md"
keywords = ["embedded-hal", "embedded-hal-async"]
categories = ["embedded", "no-std"]


[dependencies]
defmt = { version = "0.3.8", optional = true }
embedded-hal = { version = "1.0.0", optional = true }
embedded-hal-async = { version = "1.0.0", optional = true }

[features]
default = ["sync-driver", "defmt"]
sync-driver = ["embedded-hal"]
async-driver = ["embedded-hal-async"]


[package.metadata.docs.rs]
all-features = true
